<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableTest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/view_pwd0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_psw" />

    <EditText
        android:id="@+id/pwd0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/view_error_pwd0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw_error_reinset"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        android:id="@+id/view_first_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_psw" />

    <EditText
        android:id="@+id/pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="18sp" />
	<TextView
        android:id="@+id/view_sec_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec_psw" />
    <EditText
        android:id="@+id/pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/view_pwd_diffrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd_diffrent"
        android:textColor="@color/red"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/widget70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setSafePassword"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetPassword"
            android:text="@string/reset_button" />

    </LinearLayout>
	
</TableLayout>